# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.405 2014/11/09 08:10:43 mr_bones_ Exp $

*syslog-ng-3.6.1 (09 Nov 2014)

  09 Nov 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.6/syslog-ng-3.6.1-link-smtp.patch, +files/3.6/syslog-ng.conf.gentoo,
  +files/3.6/syslog-ng.conf.gentoo.fbsd,
  +files/3.6/syslog-ng.conf.gentoo.hardened, +files/3.6/syslog-ng.confd,
  +files/3.6/syslog-ng.rc6, +syslog-ng-3.6.1.ebuild, metadata.xml:
  version bump to 3.6 series

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.4.8.ebuild:
  Stable for alpha, wrt bug #518404

  07 Sep 2014; Michael Sterrett <mr_bones_@gentoo.org> -syslog-ng-3.5.5.ebuild:
  old

*syslog-ng-3.5.6 (06 Sep 2014)

  06 Sep 2014; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.5.6.ebuild:
  version bump

  10 Aug 2014; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.4.8.ebuild:
  Stable for ia64, wrt bug #518404

  03 Aug 2014; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.4.8.ebuild:
  Stable for ppc, wrt bug #518404

  03 Aug 2014; Mikle Kolyada <zlogene@gentoo.org> syslog-ng-3.4.8.ebuild:
  x86 stable wrt bug #518404

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.4.8.ebuild:
  Stable for ppc64, wrt bug #518404

  01 Aug 2014; Markus Meier <maekke@gentoo.org> syslog-ng-3.4.8.ebuild:
  arm stable, bug #518404

  30 Jul 2014; Jeroen Roovers <jer@gentoo.org> syslog-ng-3.4.8.ebuild:
  Stable for HPPA (bug #518404).

  28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> syslog-ng-3.4.8.ebuild:
  amd64 stable wrt bug #518404

  28 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.5/syslog-ng-3.5.4.1-memleak.patch, -syslog-ng-3.5.4.1.ebuild:
  old

*syslog-ng-3.5.5 (21 Jul 2014)

  21 Jul 2014; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.5.5.ebuild:
  3.5 branch version bump
