@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.405 2014/11/09 08:10:43 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.406 2014/11/09 10:55:17 mr_bones_ Exp $
+
+  09 Nov 2014; Michael Sterrett <mr_bones_@gentoo.org> -syslog-ng-3.5.6.ebuild:
+  old
 
 *syslog-ng-3.6.1 (09 Nov 2014)
 
